apps/hermes/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermes
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-classic-prod"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - hermes.nahue.ar
      secretName: hermes
  rules:
    - host: hermes.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hermes
                port:
                  number: 9119
